--- a/src/components/Layoutheader/styles/Layoutheader.module.scss
+++ b/src/components/Layoutheader/styles/Layoutheader.module.scss
@@ -5,7 +5,7 @@
     .insidesectionlayout {
         width: 100%;
         height: 100%;
-        overflow-y: auto;
+        overflow-y: scroll;
         .headersection {
             width: 100%;
             position: sticky;
