--- a/src/components/checkout/components/orderdetails/styles/Orderdetails.module.scss
+++ b/src/components/checkout/components/orderdetails/styles/Orderdetails.module.scss
@@ -73,11 +73,12 @@
                 }
             }
             .editaddress {
-                border: 1px solid #e95a5a;
+                // border: 1px solid #e95a5a;
                 color: #e95a5a;
                 border-radius: 10px;
                 font-weight: 550;
                 padding: 7px 15px;
+                width:20%;
             }
             .ordersectiondetailsorder {
                 display: flex;
