--- a/src/components/middleheaderchilderns/ourwomenpreneurs/styles/Womenpren.module.scss
+++ b/src/components/middleheaderchilderns/ourwomenpreneurs/styles/Womenpren.module.scss
@@ -154,8 +154,11 @@
     width: 100%;
     object-fit:contain;
     border-radius: 10px !important;
+    @include smBreakPoint {
+        height: 250px;
+    }
     @include mdBreakPoint {
-        height: 100%;
+        height: 310px;
     }
     @include lgBreakPoint {
         height: 100%;
